# TrackYourIron

./: .env.example  .gitignore  CONTRACTS.md  README.md  README_scraper.md  docker-compose.yml  init.sql  main_scraper.py  move.py  package-lock.json  package.json  page.html  parser_server.js
bot/: config.py  main.py  requirements.txt
bot/bot/: handlers.py  keyboards.py  states.py
bot/db/: pool.py  queries.py
bot/services/: nats_consumer.py  scraper_client.py
bot/tests/: test_bot.py  test_db_modes.py  test_scraper_client.py
gateway/: Cargo.toml  Dockerfile
gateway/src/: main.rs
scraper/: Dockerfile  Dockerfile.parser  parser_server.js
scraper-service/: Cargo.toml
scraper-service/src/: db.rs  http_client.rs  main.rs  publisher.rs
scraper/scraper-service/: Cargo.toml  Dockerfile
scraper/scraper-service/src/: api.rs  db.rs  http_client.rs  main.rs  parser.rs  scheduler.rs
site/: Dockerfile  app.py  index.html  requirements.txt
