[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-nats = "0.33"

tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace"] }