[package]
name = "scraper-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.10"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
async-nats = "0.33"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
